[gd_scene format=3 uid="uid://lya3ykcqehxc"]

[ext_resource type="Script" uid="uid://djpme521r3cxe" path="res://scripts/main.gd" id="1_kgrgl"]
[ext_resource type="Environment" uid="uid://bqnqgflivjvue" path="res://scenes/main-environment.tres" id="2_blo60"]
[ext_resource type="PackedScene" uid="uid://dl2ed4gkybggf" path="res://objects/player.tscn" id="3_dw4lg"]
[ext_resource type="Script" uid="uid://bcg2kkbsnttec" path="res://scripts/view.gd" id="4_rdlik"]
[ext_resource type="PackedScene" uid="uid://t0scy8qa34xh" path="res://neighbourhood-city-modular-lowpoly/source/Untitled.glb" id="5_kgrgl"]
[ext_resource type="PackedScene" uid="uid://h6c7ik8awx1m" path="res://objects/masque.tscn" id="6_3n34g"]
[ext_resource type="Script" uid="uid://bap462su1xjtx" path="res://scripts/hud.gd" id="6_ta0d2"]
[ext_resource type="PackedScene" uid="uid://c0fi1l8sncbwx" path="res://objects/rose.tscn" id="8_kgrgl"]
[ext_resource type="PackedScene" uid="uid://duvdrrs0l4r8" path="res://objects/fight.tscn" id="9_blo60"]
[ext_resource type="PackedScene" uid="uid://7prmxeljt3jt" path="res://objects/baton.tscn" id="9_kgrgl"]
[ext_resource type="PackedScene" uid="uid://cvkq7cvymf0lx" path="res://objects/cape.tscn" id="9_rdlik"]
[ext_resource type="PackedScene" uid="uid://2obwyuo7snqe" path="res://objects/smoking.tscn" id="10_6b0ts"]
[ext_resource type="PackedScene" uid="uid://bv7o08i0ejlwn" path="res://objects/chapeau.tscn" id="10_ta0d2"]
[ext_resource type="AudioStream" uid="uid://bw1x1bmswh5vc" path="res://sounds/cartoon_fight.mp3" id="14_w4p8h"]
[ext_resource type="PackedScene" uid="uid://c7akcu5va0gs6" path="res://objects/gants.tscn" id="15_6b0ts"]
[ext_resource type="AudioStream" uid="uid://bmychler04m86" path="res://sounds/Boss_Time.mp3" id="16_ly74i"]
[ext_resource type="Texture2D" uid="uid://bn2y5x6bib68d" path="res://models/marzio_smiling-casual.png" id="17_6txf5"]
[ext_resource type="Texture2D" uid="uid://exnmifxwrbtj" path="res://models/thinking.png" id="17_kttyp"]
[ext_resource type="AudioStream" uid="uid://d0psw2augq0g5" path="res://sounds/Epic8bit.mp3" id="18_ebslw"]
[ext_resource type="Texture2D" uid="uid://dnp7uls5g6kyf" path="res://models/marzio_victorious.png" id="19_metm7"]
[ext_resource type="Texture2D" uid="uid://dqortwt4rms66" path="res://models/sailor_nothing.png" id="20_ubaa0"]
[ext_resource type="AudioStream" uid="uid://kww20yppe5bf" path="res://sounds/snd_broken_glass.mp3" id="23_ubaa0"]
[ext_resource type="AudioStream" uid="uid://ont8iayrbesk" path="res://sounds/snd_scream.mp3" id="24_31678"]

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_f17eg"]

[sub_resource type="BoxShape3D" id="BoxShape3D_kgrgl"]
size = Vector3(6.5, 10, 4)

[sub_resource type="BoxShape3D" id="BoxShape3D_blo60"]
size = Vector3(2, 10, 3)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_31678"]
height = 4.0
radius = 4.0

[node name="Main" type="Node3D" unique_id=1373623691]
script = ExtResource("1_kgrgl")

[node name="Environment" type="WorldEnvironment" parent="." unique_id=1400114855]
environment = ExtResource("2_blo60")

[node name="Player" parent="." unique_id=1039179669 node_paths=PackedStringArray("view", "bgMusic", "finalMusic") groups=["player"] instance=ExtResource("3_dw4lg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 11.710084, 0.1, 8.89799)
view = NodePath("../View")
bgMusic = NodePath("../BackgroundMusic")
finalMusic = NodePath("../FinalMusic")

[node name="Camera" type="Camera3D" parent="Player" unique_id=423831881]
transform = Transform3D(0.81424594, -0.11335465, 0.5693455, -0.21733177, 0.8499054, 0.480029, -0.5383031, -0.51459855, 0.66739637, 5.6796618, 4.7029767, 6.692391)
current = true
fov = 40.0

[node name="AudioListener3D" type="AudioListener3D" parent="Player" unique_id=807759822]

[node name="View" type="Node3D" parent="." unique_id=1047031692 node_paths=PackedStringArray("target")]
transform = Transform3D(0.707107, -0.298836, 0.640856, 0, 0.906308, 0.422618, -0.707107, -0.298836, 0.640856, 0, 0, 0)
script = ExtResource("4_rdlik")
target = NodePath("../Player")

[node name="Camera" type="Camera3D" parent="View" unique_id=700713778]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 10)
current = true
fov = 40.0

[node name="World" type="Node3D" parent="." unique_id=1586265654]

[node name="StaticBody3D" type="StaticBody3D" parent="World" unique_id=128405645]

[node name="CollisionShape3D" type="CollisionShape3D" parent="World/StaticBody3D" unique_id=698237709]
shape = SubResource("WorldBoundaryShape3D_f17eg")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="World/StaticBody3D" unique_id=1190841124]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.3, 0, -2.2)
shape = SubResource("BoxShape3D_kgrgl")
debug_color = Color(1, 0, 0, 1)

[node name="CollisionShape3D3" type="CollisionShape3D" parent="World/StaticBody3D" unique_id=1215621331]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.3, 0, 4)
shape = SubResource("BoxShape3D_kgrgl")
debug_color = Color(1, 0, 0, 1)

[node name="CollisionShape3D4" type="CollisionShape3D" parent="World/StaticBody3D" unique_id=1383080999]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.2476063, 0, 0.88698876)
shape = SubResource("BoxShape3D_blo60")

[node name="City" parent="World" unique_id=1737063565 instance=ExtResource("5_kgrgl")]

[node name="masque" parent="World" unique_id=1091573605 instance=ExtResource("6_3n34g")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.919, 1, 14.163)
type = "masque"

[node name="rose" parent="World" unique_id=2038493997 instance=ExtResource("8_kgrgl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.903, 0.5, 13.87)
type = "rose"

[node name="baton" parent="World" unique_id=1540186235 instance=ExtResource("9_kgrgl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0.5, 14)
type = "baton"

[node name="smoking" parent="World" unique_id=2021806342 instance=ExtResource("10_6b0ts")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15.613, 0.3, 14.144)
type = "smoking"

[node name="chapeau" parent="World" unique_id=1439334601 instance=ExtResource("10_ta0d2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13.204, 1, 13.91)
type = "chapeau"

[node name="cape" parent="World" unique_id=467155737 instance=ExtResource("9_rdlik")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.882, 0.5, 14.073)
type = "cape"

[node name="gants" parent="World" unique_id=31201424 instance=ExtResource("15_6b0ts")]
transform = Transform3D(1, 0, 0, 0, 0.5130919, -0.85833365, 0, 0.85833365, 0.5130919, 16.88796, 0.8241788, 13.191143)
type = "gants"

[node name="fight" parent="World" unique_id=116240436 instance=ExtResource("9_blo60")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 11.232476, 0, -7.462289)
visible = false

[node name="Audio" type="AudioStreamPlayer3D" parent="World/fight" unique_id=570435652]
stream = ExtResource("14_w4p8h")
unit_size = 5.0
max_distance = 18.0
parameters/looping = false

[node name="Area3D" type="Area3D" parent="World/fight" unique_id=177343352]

[node name="CollisionShape3D" type="CollisionShape3D" parent="World/fight/Area3D" unique_id=1291239659]
shape = SubResource("CylinderShape3D_31678")

[node name="Sun" type="DirectionalLight3D" parent="." unique_id=661692617]
transform = Transform3D(-0.422618, -0.694272, 0.582563, 0, 0.642788, 0.766044, -0.906308, 0.323744, -0.271654, 0, 0, 0)
shadow_enabled = true
shadow_opacity = 0.75

[node name="HUD" type="Control" parent="." unique_id=457057523]
layout_mode = 3
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -640.0
offset_right = 640.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 8
size_flags_vertical = 8
script = ExtResource("6_ta0d2")

[node name="Container" type="PanelContainer" parent="HUD" unique_id=1947034075]
layout_mode = 0
offset_left = 1113.0
offset_right = 1280.0
offset_bottom = 205.0

[node name="MarginContainer" type="MarginContainer" parent="HUD/Container" unique_id=450524877]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VFlowContainer" type="VBoxContainer" parent="HUD/Container/MarginContainer" unique_id=1625222374]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="Masque" type="Label" parent="HUD/Container/MarginContainer/VFlowContainer" unique_id=1523536549]
layout_mode = 2
text = "MASK"

[node name="Line" type="Line2D" parent="HUD/Container/MarginContainer/VFlowContainer/Masque" unique_id=2116142465]
visible = false
modulate = Color(0, 0, 0, 0.8666667)
position = Vector2(10.478978, 13)
scale = Vector2(1.394958, 1)
points = PackedVector2Array(-19, -1, 90, -1)
width = 5.0

[node name="Rose" type="Label" parent="HUD/Container/MarginContainer/VFlowContainer" unique_id=1522421913]
layout_mode = 2
text = "ROSE"

[node name="Line" type="Line2D" parent="HUD/Container/MarginContainer/VFlowContainer/Rose" unique_id=278391677]
visible = false
modulate = Color(0, 0, 0, 0.8666667)
position = Vector2(10.478978, 13)
scale = Vector2(1.394958, 1)
points = PackedVector2Array(-19, -1, 90, -1)
width = 5.0

[node name="Baton" type="Label" parent="HUD/Container/MarginContainer/VFlowContainer" unique_id=687658687]
layout_mode = 2
text = "WALKING CANE"

[node name="Line" type="Line2D" parent="HUD/Container/MarginContainer/VFlowContainer/Baton" unique_id=997948450]
visible = false
modulate = Color(0, 0, 0, 0.8666667)
position = Vector2(10.478978, 13)
scale = Vector2(1.394958, 1)
points = PackedVector2Array(-19, -1, 90, -1)
width = 5.0

[node name="Chapeau" type="Label" parent="HUD/Container/MarginContainer/VFlowContainer" unique_id=1532793141]
layout_mode = 2
text = "TOP HAT"

[node name="Line" type="Line2D" parent="HUD/Container/MarginContainer/VFlowContainer/Chapeau" unique_id=213177777]
visible = false
modulate = Color(0, 0, 0, 0.8666667)
position = Vector2(10.478978, 13)
scale = Vector2(1.394958, 1)
points = PackedVector2Array(-19, -1, 90, -1)
width = 5.0

[node name="Gants" type="Label" parent="HUD/Container/MarginContainer/VFlowContainer" unique_id=1073876928]
layout_mode = 2
text = "GLOVES"

[node name="Line" type="Line2D" parent="HUD/Container/MarginContainer/VFlowContainer/Gants" unique_id=1375275169]
visible = false
modulate = Color(0, 0, 0, 0.8666667)
position = Vector2(10.478978, 13)
scale = Vector2(1.394958, 1)
points = PackedVector2Array(-19, -1, 90, -1)
width = 5.0

[node name="Smoking" type="Label" parent="HUD/Container/MarginContainer/VFlowContainer" unique_id=66300097]
layout_mode = 2
text = "TUXEDO"

[node name="Line" type="Line2D" parent="HUD/Container/MarginContainer/VFlowContainer/Smoking" unique_id=1485544642]
visible = false
modulate = Color(0, 0, 0, 0.8666667)
position = Vector2(10.478978, 13)
scale = Vector2(1.394958, 1)
points = PackedVector2Array(-19, -1, 90, -1)
width = 5.0

[node name="Cape" type="Label" parent="HUD/Container/MarginContainer/VFlowContainer" unique_id=545620869]
layout_mode = 2
text = "CAPE"

[node name="Line" type="Line2D" parent="HUD/Container/MarginContainer/VFlowContainer/Cape" unique_id=992407541]
visible = false
modulate = Color(0, 0, 0, 0.8666667)
position = Vector2(10.478978, 13)
scale = Vector2(1.394958, 1)
points = PackedVector2Array(-19, -1, 90, -1)
width = 5.0

[node name="Casual" type="PanelContainer" parent="HUD" unique_id=1033266740]
visible = false
layout_direction = 2
layout_mode = 0
offset_left = 510.0
offset_top = 487.0
offset_right = 1276.0
offset_bottom = 717.0

[node name="MarginContainer" type="MarginContainer" parent="HUD/Casual" unique_id=1099119116]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="RichTextLabel" type="RichTextLabel" parent="HUD/Casual/MarginContainer" unique_id=1728752099]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 40
text = "Ah, what a lovely day
to stroll around the city!"

[node name="TextureRect" type="TextureRect" parent="HUD/Casual" unique_id=70372300]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
texture = ExtResource("17_6txf5")

[node name="TheyNeedMe" type="PanelContainer" parent="HUD" unique_id=1330307767]
visible = false
layout_direction = 2
layout_mode = 0
offset_left = 509.0
offset_top = 489.0
offset_right = 1277.0
offset_bottom = 716.0

[node name="MarginContainer" type="MarginContainer" parent="HUD/TheyNeedMe" unique_id=1382317869]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="RichTextLabel" type="RichTextLabel" parent="HUD/TheyNeedMe/MarginContainer" unique_id=898562155]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 40
text = "They need me!
Time to suit up!
Where did I leave my stuff?"

[node name="TextureRect" type="TextureRect" parent="HUD/TheyNeedMe" unique_id=406463540]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
texture = ExtResource("17_kttyp")
stretch_mode = 4

[node name="JobDone" type="PanelContainer" parent="HUD" unique_id=612616494]
visible = false
layout_direction = 2
layout_mode = 0
offset_left = 509.0
offset_top = 491.0
offset_right = 1279.0
offset_bottom = 716.0

[node name="MarginContainer" type="MarginContainer" parent="HUD/JobDone" unique_id=2138808411]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="RichTextLabel" type="RichTextLabel" parent="HUD/JobDone/MarginContainer" unique_id=1765061835]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 40
text = "My job here is done!"

[node name="TextureRect" type="TextureRect" parent="HUD/JobDone" unique_id=333358791]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
texture = ExtResource("19_metm7")
stretch_mode = 4

[node name="DidNothing" type="PanelContainer" parent="HUD" unique_id=933475028]
visible = false
layout_direction = 2
layout_mode = 0
offset_left = 509.0
offset_top = 491.0
offset_right = 1279.0
offset_bottom = 716.0

[node name="MarginContainer" type="MarginContainer" parent="HUD/DidNothing" unique_id=2006215160]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="RichTextLabel" type="RichTextLabel" parent="HUD/DidNothing/MarginContainer" unique_id=1296380762]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 40
text = "But you didn't
do anything..."

[node name="TextureRect" type="TextureRect" parent="HUD/DidNothing" unique_id=1586848732]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
texture = ExtResource("20_ubaa0")
stretch_mode = 4

[node name="Exactly" type="PanelContainer" parent="HUD" unique_id=360907683]
visible = false
layout_direction = 2
layout_mode = 0
offset_left = 509.0
offset_top = 491.0
offset_right = 1279.0
offset_bottom = 716.0

[node name="MarginContainer" type="MarginContainer" parent="HUD/Exactly" unique_id=913189116]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="RichTextLabel" type="RichTextLabel" parent="HUD/Exactly/MarginContainer" unique_id=1505579955]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 40
text = "Exactly!"

[node name="TextureRect" type="TextureRect" parent="HUD/Exactly" unique_id=705808894]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
texture = ExtResource("19_metm7")
stretch_mode = 4

[node name="NotDressed" type="PanelContainer" parent="HUD" unique_id=112340346]
visible = false
layout_direction = 2
layout_mode = 0
offset_left = 509.0
offset_top = 489.0
offset_right = 1277.0
offset_bottom = 716.0

[node name="MarginContainer" type="MarginContainer" parent="HUD/NotDressed" unique_id=857532130]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="RichTextLabel" type="RichTextLabel" parent="HUD/NotDressed/MarginContainer" unique_id=1708070477]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 40
text = "I can't intervene
dressed like a civilian... "

[node name="TextureRect" type="TextureRect" parent="HUD/NotDressed" unique_id=1088406347]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
texture = ExtResource("17_kttyp")
stretch_mode = 4

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="." unique_id=109822987]
stream = ExtResource("16_ly74i")
volume_db = -15.0

[node name="FinalMusic" type="AudioStreamPlayer" parent="." unique_id=113080684]
stream = ExtResource("18_ebslw")
volume_db = -15.0

[node name="StartMessage" type="Timer" parent="." unique_id=740233047]
wait_time = 2.0
one_shot = true
autostart = true

[node name="CloseMessage" type="Timer" parent="." unique_id=419598693]
one_shot = true

[node name="StartFight" type="Timer" parent="." unique_id=1618786773]
wait_time = 10.0
one_shot = true
autostart = true

[node name="Timer" type="Timer" parent="." unique_id=1635913172]
one_shot = true

[node name="BrokenGlass" type="AudioStreamPlayer" parent="." unique_id=3497478]
stream = ExtResource("23_ubaa0")

[node name="Scream" type="AudioStreamPlayer" parent="." unique_id=1131560982]
stream = ExtResource("24_31678")

[connection signal="coin_collected" from="Player" to="HUD" method="on_object_collected"]
[connection signal="body_entered" from="World/masque" to="World/masque" method="_on_body_entered"]
[connection signal="body_entered" from="World/rose" to="World/rose" method="_on_body_entered"]
[connection signal="body_entered" from="World/baton" to="World/baton" method="_on_body_entered"]
[connection signal="body_entered" from="World/smoking" to="World/smoking" method="_on_body_entered"]
[connection signal="body_entered" from="World/chapeau" to="World/chapeau" method="_on_body_entered"]
[connection signal="body_entered" from="World/cape" to="World/cape" method="_on_body_entered"]
[connection signal="body_entered" from="World/gants" to="World/gants" method="_on_body_entered"]
[connection signal="body_entered" from="World/fight/Area3D" to="." method="_player_enter_fight_area"]
[connection signal="timeout" from="StartMessage" to="." method="_on_start_message_timeout"]
[connection signal="timeout" from="CloseMessage" to="." method="_on_close_message_timeout"]
[connection signal="timeout" from="StartFight" to="." method="_on_start_fight_timeout"]
